(1) moved paragraph formatting to genericutils (2) revised todo: added release milestones

--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/usage.vm
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/usage.vm
@@ -5,6 +5,8 @@ package $info.getPackageName();
 import java.util.*;
 
 import com.google.common.collect.Lists;
+import genericutils.StringUtil;
+import jline.Terminal;
 
 public final class FbCliUtil {
   private static class Option {
@@ -12,7 +14,7 @@ public final class FbCliUtil {
     public String aliasData;
     public String description;
 
-    public void print() {
+    public void print(int width) {
       if (aliases.isEmpty()) {
         System.out.println(aliasData);
       }
@@ -22,72 +24,11 @@ public final class FbCliUtil {
           System.out.print("=" + aliasData + "");
         System.out.println();
       }
-      for (String line : format(description, 70))
+      for (String line : StringUtil.format(description, width - 5))
         System.out.println("     " + line);
     }
 
     // TODO: perhaps move this in genericutils
-    // Splits into lines a text, trying to minimize sum(x^2), where
-    // x is the slack. The slack on the last line is ignored. Also,
-    // the text is justified (fills the line).
-    public static List<String> format(String text, int width) {
-      ArrayList<String> words = Lists.newArrayList();
-      Scanner s = new Scanner(text);
-      while (s.hasNext()) {
-        String word = s.next();
-        words.add(word);
-      }
-      int[] nextLine = new int[words.size()];
-      int[] slackPerLine = new int[words.size()];
-      int[] score = new int[words.size()];
-      int i = words.size(), j;
-      while (--i >= 0) {
-        score[i] = Integer.MAX_VALUE;
-        int slack = width - words.get(i).length();
-        j = i + 1;
-        while (j < words.size()) {
-          int newScore = slack * slack + score[j];
-          if (newScore < score[i]) {
-            score[i] = newScore;
-            slackPerLine[i] = slack;
-            nextLine[i] = j;
-          }
-          slack -= 1 + words.get(j++).length();
-          if (slack < 0) break;
-        }
-        if (j == words.size() && (slack > 0 || j==i+1)) {
-          score[i] = 0;
-          slackPerLine[i] = 0;
-          nextLine[i] = words.size();
-        }
-      }
-
-      Random rand = new Random(0);
-      List<String> result = Lists.newArrayList();
-      for (i = 0; i < words.size(); i = nextLine[i]) {
-        StringBuilder sb = new StringBuilder();
-        int oneSpace = 1;
-        int gaps = nextLine[i] - i - 1;
-        int extra = 0;
-        if (gaps > 0 && nextLine[i] < words.size()) {
-          oneSpace = slackPerLine[i] / gaps + 1;
-          extra = slackPerLine[i] % gaps;
-        }
-        for (j = i; j < nextLine[i]; ++j) {
-          if (j != i) {
-            for (int k = 0; k < oneSpace; ++k) sb.append(" ");
-            if (rand.nextInt(gaps) < extra) {
-              --extra;
-              sb.append(" ");
-            }
-            --gaps;
-          }
-          sb.append(words.get(j));
-        }
-        result.add(sb.toString());
-      }
-      return result;
-    }
   }
 
   public static void printUsage() {
@@ -112,11 +53,13 @@ public final class FbCliUtil {
     options.add(newOption);
 #end
 
-    for (String line : Option.format("$info.getDescription()", 75))
+    Terminal t = Terminal.setupTerminal();
+    int w = t.getTerminalWidth();
+    for (String line : StringUtil.format("$info.getDescription()", w))
       System.out.println(line);
     for (Option o : options) {
       System.out.println();
-      o.print();
+      o.print(w);
     }
   }
 }
