fixes from windows (1) don't use up all terminal width (behaves strangely on win) (2) added jar dependencies: how did it work on linux?

--- a/src/freeboogie/trunk/FreeBoogie/src/freeboogie/usage.vm
+++ b/src/freeboogie/trunk/FreeBoogie/src/freeboogie/usage.vm
@@ -54,7 +54,7 @@ public final class FbCliUtil {
 #end
 
     Terminal t = Terminal.setupTerminal();
-    int w = t.getTerminalWidth();
+    int w = t.getTerminalWidth() - 5;
     for (String line : StringUtil.format("$info.getDescription()", w))
       System.out.println(line);
     for (Option o : options) {
