--- a/FreeBoogie/src/freeboogie/usage.vm
+++ b/FreeBoogie/src/freeboogie/usage.vm
@@ -43,7 +43,7 @@ public final class FbCliUtil {
     newOption.aliasData = "<$option.getType().getTypeDescriptionString()>";
     if (newOption.aliasData.startsWith("<enum")) {
       String x = "[" + "$!option.getPropertyValue("choices")" + "]";
-      x = x.replace(',','|').replaceAll("\\([^)]*\\)","");
+      x = x.replace(',','|').replaceAll("\\([^)]*\\)","").toLowerCase();
       if (newOption.aliasData.endsWith("-list>")) x += "*";
       String d = "$!option.getPropertyValue("default")";
       if (!d.equals("")) x += "  (default: " + d + ")";
